[gd_scene load_steps=3 format=3 uid="uid://bgjqxlrky4y8n"]

[ext_resource type="Script" uid="uid://ps0smiy3ppyx" path="res://script/multiplayer.gd" id="1_w4jws"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3lg42"]
properties/0/path = NodePath(".:username_sync")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:instances")
properties/1/spawn = true
properties/1/replication_mode = 2

[node name="multiplayer" type="Node3D"]
script = ExtResource("1_w4jws")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="Menu"]
layout_mode = 0
offset_left = 41.0
offset_top = 57.0
offset_right = 85.0
offset_bottom = 123.0

[node name="TextEdit" type="TextEdit" parent="Menu/GridContainer"]
custom_minimum_size = Vector2(128, 35)
layout_mode = 2
text = "Username"
placeholder_text = "Username"

[node name="Scan" type="Button" parent="Menu/GridContainer"]
layout_mode = 2
text = "Scan Server"

[node name="Host" type="Button" parent="Menu/GridContainer"]
layout_mode = 2
text = "Host"

[node name="ItemList" type="ItemList" parent="Menu/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
fixed_icon_size = Vector2i(32, 32)

[node name="Button" type="Button" parent="Menu/GridContainer"]
layout_mode = 2
text = "Join (Local Host)"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3lg42")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="Menu/GridContainer/Scan" to="." method="_on_scan_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/GridContainer/Host" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="Menu/GridContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Menu/GridContainer/Button" to="." method="_on_button_pressed"]
